--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,35 @@
 {
-  "extends": "next/core-web-vitals"
+  "parser": "@typescript-eslint/parser",
+  "extends": ["next", "plugin:@typescript-eslint/recommended", "plugin:prettier/recommended"],
+  "plugins": ["@typescript-eslint", "unused-imports"],
+  "root": true,
+  "rules": {
+    "unused-imports/no-unused-imports": "error",
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      {
+        "vars": "all",
+        "varsIgnorePattern": "^_",
+        "args": "after-used",
+        "argsIgnorePattern": "^_"
+      }
+    ],
+    // Add or ensure this rule is present to automatically remove unused imports
+    "unused-imports/no-unused-vars": "off" // Turn off if you prefer not to highlight unused vars but still want to remove unused imports
+  },
+  "overrides": [
+    {
+      "files": [
+        "app/**/loading.tsx",
+        "app/**/not-found.tsx",
+        "app/**/page.tsx",
+        "app/**/layout.tsx",
+        "app/**/error.tsx",
+        "app/**/global-error.tsx"
+      ],
+      "rules": {
+        "import/no-default-export": 0
+      }
+    }
+  ]
 }
