--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint . --ext js,ts,jsx,tsx,html,vue,mjs,json"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "@temporalio/client": "^1.10.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.408.0",
     "next": "15.0.0-rc.0",
     "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522"
+    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
