--- a/package.json
+++ b/package.json
@@ -2,24 +2,29 @@
   "name": "temporal-trial",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint . --ext js,ts,jsx,tsx,html,vue,mjs,json"
+    "lint": "next lint . --ext js,ts,jsx,tsx,html,vue,mjs,json",
+    "start-workers": "concurrently node temporal/workers/*.mjs"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
     "@temporalio/client": "^1.10.1",
     "@temporalio/worker": "^1.10.1",
+    "@temporalio/workflow": "^1.10.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "concurrently": "^8.2.2",
     "lucide-react": "^0.408.0",
     "next": "15.0.0-rc.0",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
