--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": [
-    ".eslintrc.json",
-    "next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [".eslintrc.json", "next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
